# dhooks-lite

./: .coveragerc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: ci-cd.yaml
dhooks_lite/: __init__.py  client.py  constants.py  embed.py  serializers.py
docs/: api.rst  conf.py  index.rst  requirements.txt
examples/: examples.py
tests/: test_client.py  test_embed.py  test_serializers.py
